Fix static file caching issues

--- a/views/parentReadOnlyView.ejs
+++ b/views/parentReadOnlyView.ejs
@@ -125,9 +125,14 @@
             </div>
         </div>
     </div>
+    <!-- Thêm Modal cho hình ảnh -->
+    <div id="imageModal" class="modal">
+        <span class="close">&times;</span>
+        <img id="imagePreview" class="modal-content" src="" alt="Hình ảnh chi tiết">
+    </div>
     <script src="/scriptReadOnly.js"></script>
     <!-- Preview Image Modal -->
-    <img id="imagePreview" src="" alt="Hình ảnh chi tiết">
+    <!-- <img id="imagePreview" src="" alt="Hình ảnh chi tiết"> -->
 
 
 </body>
