Fix static file caching issues

--- a/views/parentReadOnlyView.ejs
+++ b/views/parentReadOnlyView.ejs
@@ -125,21 +125,10 @@
             </div>
         </div>
     </div>
+    <!-- Thêm Modal cho hình ảnh -->
     <div id="imageModal" class="modal">
         <span class="close">&times;</span>
         <img id="imagePreview" class="modal-content" src="" alt="Hình ảnh chi tiết">
-        <div class="modal-loading">Đang tải...</div>
-        <div class="modal-controls">
-            <button class="control-btn zoom-in">
-                <i class="bi bi-zoom-in"></i>
-            </button>
-            <button class="control-btn zoom-out">
-                <i class="bi bi-zoom-out"></i>
-            </button>
-            <button class="control-btn rotate">
-                <i class="bi bi-arrow-clockwise"></i>
-            </button>
-        </div>
     </div>
     <script src="/scriptReadOnly.js"></script>
     <!-- Preview Image Modal -->
